--- a/.appbuilder-state.json
+++ b/.appbuilder-state.json
@@ -1,1 +1,1 @@
-{"applicationId":"wndgfuepe7qw","applicationName":"Test2","platform":"Angular","projectType":"Standalone"}
+{"applicationId":"wndgfuepe7qw","applicationName":"Test2","platform":"React"}
